# wsc-poc

./: .envrc.local.example  .ghci  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.nonix  .stylish-haskell.yaml  AGENTS.md  CLAUDE.md  README.md  benchmark-onchain-compare.sh  benchmark-onchain-scripts.sh  cabal.project  debug-image.sh  deploy-registry.sh  deploy.sh  deployment-root.json  flake.nix  hei.yaml  hie.yaml  issue-tokens.sh  plutarch_vs_aiken_benches.txt  query.sh  register-policy.sh  register-stake-scripts.sh  smart-tokens-plutarch.cabal  transfer.sh  tx-vis.sh
src/: Profile.hs  wst-poc.cabal
src/MerkleTree/: Helpers.hs  Merkling.hs
src/Plutarch/Extra/: Record.hs
src/SmartTokens/Contracts/: ExampleTransferLogic.hs  Issuance.hs  ProgrammableLogicBase.hs  ProtocolParams.hs
src/SmartTokens/Core/: Crypto.hs  Scripts.hs  Utils.hs
src/SmartTokens/LinkedList/: Common.hs  MintDirectory.hs
src/SmartTokens/Types/: PTokenDirectory.hs
src/Testing/: Crypto.hs  MerklePatriciaForestry.hs  Test.hs  TransactionProofs.hs
src/Wst/: Server.hs
src/aiken-example/aiken/: README.md  aiken.toml
src/aiken-example/haskell/: aiken-example.cabal
src/app/: Main.hs
src/examples/aiken/: update-aiken-blueprint.sh
src/examples/aiken/aiken/: .gitignore  aiken.toml  plutus.json
src/examples/aiken/aiken/validators/: transfer.ak
src/examples/aiken/haskell/: aiken-example.cabal
src/examples/aiken/haskell/data/: aiken-scripts.json
src/examples/aiken/haskell/test/: Spec.hs
src/examples/regulated-stablecoin/: regulated-stablecoin.cabal
src/examples/regulated-stablecoin/exe/calculate-hashes/: Main.hs
src/examples/regulated-stablecoin/exe/convert-key/: Main.hs
src/examples/regulated-stablecoin/exe/export-smart-tokens/: Main.hs
src/examples/regulated-stablecoin/exe/full-transaction-benchmarks/: FullTransactionBenchmarks.hs
src/examples/regulated-stablecoin/lib/Wst/: App.hs  AppError.hs  Cli.hs  Client.hs  Server.hs
src/exe/convert-key/: Main.hs
src/exe/export-smart-tokens/: Main.hs
src/exe/write-openapi-schema/: Main.hs
src/exe/wst-poc/: Main.hs
src/exe/wst-poc-mock-server/: Main.hs
src/lib/SmartTokens/: CodeLens.hs
src/lib/SmartTokens/Contracts/: AlwaysYields.hs  ExampleTransferLogic.hs  Issuance.hs  ProgrammableLogicBase.hs  ProgrammableLogicBase.txt  ProtocolParams.hs
src/lib/SmartTokens/Core/: List.hs  PlutusDataList.hs  Scripts.hs  Utils.txt
src/lib/SmartTokens/LinkedList/: Common.hs  MintBlacklist.hs  MintDirectory.hs  SpendBlacklist.hs  SpendDirectory.hs
src/lib/SmartTokens/Types/: Constants.hs  PTokenDirectory.hs  ProtocolParams.hs
src/lib/Types/: Classes.hs  Constants.hs
src/lib/Wst/: App.hs  AppError.hs  Cli.hs  Client.hs  Offchain.hs  Onchain.hs  Orphans.hs  Server.hs
src/lib/Wst/Cli/: Command.hs  RuntimeEnv.hs
src/lib/Wst/JSON/: Utils.hs
src/lib/Wst/Offchain/: Blacklist.hs  DirectorySet.hs  Env.hs  LinkedList.hs  ProgrammableLogic.hs  ProtocolParams.hs  Query.hs  Scripts.hs
src/lib/Wst/Offchain/BuildTx/: Blacklist.hs  DirectorySet.hs  ExampleTransfer.hs  Failing.hs  LinkedList.hs  ProgrammableLogic.hs  ProtocolParams.hs  TransferLogic.hs
src/lib/Wst/Offchain/Endpoints/: Deployment.hs  DirectorySet.hs  Env.hs  ProtocolParams.hs  Query.hs
src/lib/Wst/Server/: BlockfrostKey.hs  BlockfrostProxy.hs  DemoEnvironment.hs  Endpoints.hs  Types.hs
src/onchain/: wst-poc-onchain.cabal
src/onchain/lib/Wst/: Onchain.hs
src/programmable-tokens/: programmable-tokens.cabal
src/programmable-tokens-offchain/: programmable-tokens-offchain.cabal
src/programmable-tokens-offchain/lib/ProgrammableTokens/JSON/: Utils.hs
src/programmable-tokens-offchain/lib/ProgrammableTokens/OffChain/: AikenProgrammableTokenScripts.hs  BuildTx.hs  Endpoints.hs  Env.hs  Error.hs  Orphans.hs  Query.hs  Scripts.hs  UTxODat.hs
src/programmable-tokens-onchain/: AGENTS.md  programmable-tokens-onchain.cabal  skills.md
src/programmable-tokens-onchain/lib/: Profile.hs
src/programmable-tokens-onchain/lib/SmartTokens/: CodeLens.hs
src/programmable-tokens-onchain/lib/SmartTokens/Contracts/: AlwaysYields.hs  ExampleTransferLogic.hs  Issuance.hs  IssuanceCborHex.hs  ProgrammableLogicBase.hs  ProtocolParams.hs
src/programmable-tokens-onchain/lib/SmartTokens/Core/: Scripts.hs
src/programmable-tokens-onchain/lib/SmartTokens/LinkedList/: BlacklistCommon.hs  Common.hs  MintBlacklist.hs  MintDirectory.hs  SpendBlacklist.hs  SpendDirectory.hs
src/programmable-tokens-onchain/lib/SmartTokens/Types/: Constants.hs  PTokenDirectory.hs  ProtocolParams.hs
src/programmable-tokens-onchain/lib/Types/: Constants.hs
src/programmable-tokens-test/: programmable-tokens-test.cabal  programmable-tokens-testlib.cabal
src/programmable-tokens-test/exe/: BenchmarkOnchainAikenScripts.hs  BenchmarkOnchainFunctions.hs  BenchmarkOnchainScripts.hs
src/programmable-tokens-test/exe/BenchmarkOnchain/: CardanoScriptHelpers.hs  Compile.hs  Formatting.hs  MainnetDexFixture.hs  ScriptFixtureIds.hs  ScriptHelpers.hs  ScriptRunner.hs  ScriptScenario.hs  SimpleRunner.hs  TxD29Fixture.hs
src/programmable-tokens-test/lib/ProgrammableTokens/: Gen.hs  Test.hs
src/programmable-tokens-test/test/: Spec.hs
src/programmable-tokens-test/test/ProgrammableTokens/Test/: DirectoryMint.hs  DirectorySet.hs  Error.hs  GoldenEncoding.hs  ProgrammableLogicGlobal.hs  ProgrammableLogicMinting.hs
src/programmable-tokens/lib/SmartTokens/: CodeLens.hs
src/programmable-tokens/lib/SmartTokens/Contracts/: ExampleTransferLogic.hs  Issuance.hs  IssuanceCborHex.hs  ProgrammableLogicBase.hs  (+1 more)
src/programmable-tokens/lib/Types/: Constants.hs
src/regulated-stablecoin/: wst-poc.cabal
src/regulated-stablecoin/exe/calculate-hashes/: Main.hs
src/regulated-stablecoin/exe/export-smart-tokens/: Main.hs
src/regulated-stablecoin/exe/write-openapi-schema/: Main.hs
src/regulated-stablecoin/exe/wst-poc-cli/: Main.hs
src/regulated-stablecoin/lib/: Profile.hs
src/regulated-stablecoin/lib/Wst/: App.hs  AppError.hs
src/regulated-stablecoin/test/unit/: Spec.hs
src/test/Wst/Test/: Env.hs  UnitTest.hs
(+213 files in other folders)
