cabal-version:      3.4
name:               wst-poc
version:            0.3.0.0
synopsis:           On-chain code for regulated stablecoin proof-of-concept
license:            Apache-2.0
license-files:      LICENSE
maintainer:         j-mueller@users.noreply.github.com
author:             Djed team @ IOG
homepage:           https://github.com/input-output-hk/wsc-poc
bug-reports:        https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Profile
    SmartTokens.Contracts.ExampleTransferLogic
    SmartTokens.Contracts.Issuance
    SmartTokens.Contracts.ProgrammableLogicBase
    SmartTokens.Contracts.ProtocolParams
    SmartTokens.Core.Scripts
    SmartTokens.LinkedList.Common
    SmartTokens.LinkedList.MintDirectory
    SmartTokens.LinkedList.SpendDirectory
    SmartTokens.Types.Constants
    SmartTokens.Types.ProtocolParams
    SmartTokens.Types.PTokenDirectory
    Types.Constants
    Wst.Cli
    Wst.Client
    Wst.Offchain
    Wst.Offchain.BuildTx.Blacklist
    Wst.Offchain.BuildTx.DirectorySet
    Wst.Offchain.BuildTx.LinkedList
    Wst.Offchain.BuildTx.ProgrammableLogic
    Wst.Offchain.BuildTx.ProtocolParams
    Wst.Offchain.BuildTx.TransferLogic
    Wst.Offchain.Endpoints.DirectorySet
    Wst.Offchain.Endpoints.Env
    Wst.Offchain.Endpoints.ProtocolParams
    Wst.Offchain.Scripts
    Wst.Onchain
    Wst.Server
    Wst.Server.Endpoints
    Wst.Server.Types

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base                   >=4.14 && <4.20
    , bytestring
    , cardano-api
    , cardano-ledger-api
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-node-client
    , convex-optics
    , convex-wallet
    , generics-sop
    , lens
    , mtl
    , plutarch
    , plutarch-ledger-api
    , plutarch-onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , warp

  hs-source-dirs:  lib

executable wst-poc
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/wst-poc
  build-depends:
    , base
    , wst-poc

executable export-smart-tokens
  import:         lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , plutarch
    , plutus-ledger-api
    , text
    , wst-poc

  hs-source-dirs: exe/export-smart-tokens

test-suite wst-poc-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -Wno-unused-packages

  main-is:        Spec.hs
  other-modules:
    Wst.Test.Env
    Wst.Test.UnitTest

  build-depends:
    , base               >=4.14.0
    , cardano-api
    , convex-base
    , convex-mockchain
    , convex-wallet
    , mtl
    , plutus-ledger-api
    , tasty
    , tasty-hunit
    , wst-poc
