cabal-version:      3.4
name:               wst-poc
version:            0.3.0.0
synopsis:           On-chain code for regulated stablecoin proof-of-concept
license:            Apache-2.0
license-files:      LICENSE
maintainer:         j-mueller@users.noreply.github.com
author:             Djed team @ IOG
homepage:           https://github.com/input-output-hk/wst-poc
bug-reports:        https://github.com/input-output-hk/wst-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Profile
    SmartTokens.Contracts.ExampleTransferLogic
    SmartTokens.Contracts.Issuance
    SmartTokens.Contracts.ProgrammableLogicBase
    SmartTokens.Contracts.ProtocolParams
    SmartTokens.LinkedList.Common
    SmartTokens.LinkedList.MintDirectory
    SmartTokens.LinkedList.SpendBlacklist
    SmartTokens.LinkedList.SpendDirectory
    SmartTokens.Types.Constants
    SmartTokens.Types.ProtocolParams
    SmartTokens.Types.PTokenDirectory
    Types.Constants
    Wst.Cli
    Wst.Offchain
    Wst.Onchain
    Wst.Server

  -- Compile

  build-depends:
    , base
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutarch-onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

  hs-source-dirs:  lib

executable wst-poc
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/wst-poc
  build-depends:
    , base
    , wst-poc

executable export-smart-tokens
  import:         lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , plutarch
    , plutus-ledger-api
    , text
    , wst-poc

  hs-source-dirs: exe/export-smart-tokens
