cabal-version:      3.4
name:               wst-poc
version:            0.3.0.0
synopsis:           On-chain code for regulated stablecoin proof-of-concept
license:            Apache-2.0
license-files:      LICENSE
maintainer:         j-mueller@users.noreply.github.com
author:             Djed team @ IOG
homepage:           https://github.com/input-output-hk/wsc-poc
bug-reports:        https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Profile
    SmartTokens.CodeLens
    SmartTokens.Contracts.AlwaysYields
    SmartTokens.Contracts.ExampleTransferLogic
    SmartTokens.Contracts.Issuance
    SmartTokens.Contracts.ProgrammableLogicBase
    SmartTokens.Contracts.ProtocolParams
    SmartTokens.Core.Scripts
    SmartTokens.LinkedList.BlacklistCommon
    SmartTokens.LinkedList.Common
    SmartTokens.LinkedList.MintBlacklist
    SmartTokens.LinkedList.MintDirectory
    SmartTokens.LinkedList.SpendBlacklist
    SmartTokens.LinkedList.SpendDirectory
    SmartTokens.Types.Constants
    SmartTokens.Types.ProtocolParams
    SmartTokens.Types.PTokenDirectory
    Types.Constants
    Wst.App
    Wst.AppError
    Wst.Cli
    Wst.Cli.Command
    Wst.Client
    Wst.JSON.Utils
    Wst.Offchain.BuildTx.DirectorySet
    Wst.Offchain.BuildTx.Failing
    Wst.Offchain.BuildTx.LinkedList
    Wst.Offchain.BuildTx.ProgrammableLogic
    Wst.Offchain.BuildTx.ProtocolParams
    Wst.Offchain.BuildTx.TransferLogic
    Wst.Offchain.BuildTx.Utils
    Wst.Offchain.Endpoints.Deployment
    Wst.Offchain.Env
    Wst.Offchain.Query
    Wst.Offchain.Scripts
    Wst.Orphans
    Wst.Server
    Wst.Server.DemoEnvironment
    Wst.Server.Types

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , Blammo
    , blockfrost-api
    , blockfrost-client
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-blockfrost
    , convex-coin-selection
    , convex-optics
    , convex-wallet
    , generics-sop
    , lens
    , mtl
    , openapi3
    , optparse-applicative
    , plutarch
    , plutarch-ledger-api
    , plutarch-onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , wai-cors
    , warp

  hs-source-dirs:  lib

executable wst-poc-cli
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/wst-poc-cli
  ghc-options:    -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:
    , base
    , wst-poc

executable convert-key
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/convert-key
  ghc-options:    -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:
    , base
    , cardano-api
    , convex-wallet
    , text

executable calculate-hashes
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/calculate-hashes
  ghc-options:    -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , text
    , wst-poc

executable export-smart-tokens
  import:         lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-binary
    , directory
    , filepath
    , mtl
    , optparse-applicative
    , plutarch
    , plutus-ledger-api
    , text
    , wst-poc

  hs-source-dirs: exe/export-smart-tokens

library test-lib
  import:          lang
  hs-source-dirs:  test/lib
  exposed-modules: Wst.Test.Gen
  build-depends:
    , base
    , cardano-api
    , cardano-api:gen
    , convex-base
    , hedgehog-quickcheck
    , plutus-ledger-api
    , QuickCheck
    , wst-poc

test-suite wst-poc-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Spec.hs
  other-modules:
    Wst.Test.Env
    Wst.Test.UnitTest

  build-depends:
    , base                   >=4.14.0
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-core
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-tx
    , tasty
    , tasty-hunit
    , wst-poc

executable write-openapi-schema
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: exe/write-openapi-schema
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , servant-openapi3
    , wst-poc
