cabal-version: 3.4
name:          wst-poc-onchain
version:       0.3.0.0
synopsis:      On-chain code for regulated stablecoin proof-of-concept
license: Apache-2.0
license-files:
  LICENSE

maintainer:    j-mueller@users.noreply.github.com
author:        Djed team @ IOG
homepage:      https://github.com/input-output-hk/wst-poc
bug-reports:   https://github.com/input-output-hk/wst-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

build-type:    Simple

common lang
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                      DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                      GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                      DeriveTraversable ImportQualifiedPost NumericUnderscores
  ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                -Wincomplete-uni-patterns -Wincomplete-record-updates
                -Wredundant-constraints -Widentities

library
  import: lang
  exposed-modules:
    Wst.Onchain
  hs-source-dirs: lib
  build-depends:
    base >= 4.14 && < 4.20