cabal-version:      3.4
name:               programmable-tokens-offchain
version:            0.3.0.0
synopsis:           Reference implementation of CIP-0143 (offchain code)
license:            Apache-2.0
license-files:      LICENSE
maintainer:         j-mueller@users.noreply.github.com
author:             Philip DiSarro
homepage:           https://github.com/input-output-hk/wsc-poc
bug-reports:        https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wsc-poc>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    ProgrammableTokens.JSON.Utils
    ProgrammableTokens.OffChain.BuildTx
    ProgrammableTokens.OffChain.BuildTx.Directory
    ProgrammableTokens.OffChain.BuildTx.IssuanceCborHexRef
    ProgrammableTokens.OffChain.BuildTx.ProgrammableLogic
    ProgrammableTokens.OffChain.BuildTx.ProtocolParams
    ProgrammableTokens.OffChain.BuildTx.Utils
    ProgrammableTokens.OffChain.Endpoints
    ProgrammableTokens.OffChain.Env
    ProgrammableTokens.OffChain.Env.Directory
    ProgrammableTokens.OffChain.Env.Operator
    ProgrammableTokens.OffChain.Env.Runtime
    ProgrammableTokens.OffChain.Env.TransferLogic
    ProgrammableTokens.OffChain.Env.Utils
    ProgrammableTokens.OffChain.Error
    ProgrammableTokens.OffChain.Orphans
    ProgrammableTokens.OffChain.Query
    ProgrammableTokens.OffChain.Scripts
    ProgrammableTokens.OffChain.UTxODat

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , Blammo
    , blockfrost-api
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-coin-selection
    , convex-optics
    , convex-wallet
    , hset
    , lens
    , mtl
    , openapi3
    , plutarch
    , plutus-ledger-api
    , plutus-tx
    , programmable-tokens-onchain
    , text
    , type-fun
