cabal-version:      3.4
name:               programmable-tokens-onchain
version:            0.3.0.0
synopsis:           Reference implementation of CIP-0143 (onchain code)
license:            Apache-2.0
license-files:      LICENSE
maintainer:         j-mueller@users.noreply.github.com
author:             Philip DiSarro
homepage:           https://github.com/input-output-hk/wsc-poc
bug-reports:        https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wsc-poc>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Profile
    SmartTokens.CodeLens
    SmartTokens.Contracts.AlwaysYields
    SmartTokens.Contracts.ExampleTransferLogic
    SmartTokens.Contracts.Issuance
    SmartTokens.Contracts.IssuanceCborHex
    SmartTokens.Contracts.ProgrammableLogicBase
    SmartTokens.Contracts.ProtocolParams
    SmartTokens.Core.Scripts
    SmartTokens.LinkedList.BlacklistCommon
    SmartTokens.LinkedList.Common
    SmartTokens.LinkedList.MintBlacklist
    SmartTokens.LinkedList.MintDirectory
    SmartTokens.LinkedList.SpendBlacklist
    SmartTokens.LinkedList.SpendDirectory
    SmartTokens.Types.Constants
    SmartTokens.Types.ProtocolParams
    SmartTokens.Types.PTokenDirectory
    Types.Constants

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , cardano-api
    , generics-sop
    , lens
    , openapi3
    , plutarch
    , plutarch-ledger-api
    , plutarch-onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text
