cabal-version: 3.4
name:          programmable-tokens-test
version:       0.3.0.0
synopsis:      Utilities for testing programmable tokens (CIP 143)
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Djed team @ IOG
homepage:      https://github.com/input-output-hk/wsc-poc
bug-reports:   https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , Blammo
    , blockfrost-api
    , blockfrost-client
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-blockfrost
    , convex-coin-selection
    , convex-optics
    , convex-wallet
    , lens
    , mtl
    , openapi3
    , optparse-applicative
    , plutarch
    , plutus-ledger-api
    , plutus-tx
    , programmable-tokens-onchain
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , wai-cors
    , warp

  hs-source-dirs:  lib
