cabal-version: 3.4
name:          programmable-tokens-testlib
version:       0.3.0.0
synopsis:      Utilities for testing programmable tokens (CIP 143)
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Djed team @ IOG
homepage:      https://github.com/input-output-hk/wsc-poc
bug-reports:   https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    ProgrammableTokens.Gen
    ProgrammableTokens.Test

  hs-source-dirs:  lib
  build-depends:
    , base
    , cardano-api
    , cardano-api:gen
    , cardano-ledger-api
    , cardano-ledger-core
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , hedgehog-quickcheck
    , lens
    , mtl
    , plutus-ledger-api
    , programmable-tokens-offchain
    , programmable-tokens-onchain
    , QuickCheck
    , tasty-hunit

  hs-source-dirs:  lib

test-suite programmable-tokens-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ProgrammableTokens.Test.DirectorySet
    ProgrammableTokens.Test.Error

  build-depends:
    , base                          >=4.14.0
    , cardano-api
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-tx
    , programmable-tokens-offchain
    , programmable-tokens-onchain
    , programmable-tokens-testlib
    , tasty
    , tasty-hunit
