cabal-version: 3.4
name:          aiken-example
version:       0.3.0.0
synopsis:
  Using an aiken script as the transfer policy of a CIP-0143 programmable token

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Djed team @ IOG
homepage:      https://github.com/input-output-hk/wsc-poc
bug-reports:   https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

data-files:    data/aiken-scripts.json

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  other-modules:      Paths_aiken_example
  autogen-modules:    Paths_aiken_example

library
  import:          lang
  exposed-modules:
    Wst.Aiken.Blueprint
    Wst.Aiken.BlueprintKey
    Wst.Aiken.Error
    Wst.Aiken.Offchain
    Wst.Cli
    Wst.Cli.App
    Wst.Cli.Command
    Wst.Cli.Env

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , Blammo
    , blockfrost-api
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , containers
    , convex-base
    , convex-blockfrost
    , convex-coin-selection
    , convex-wallet
    , lens
    , mtl
    , optparse-applicative
    , plutus-core
    , plutus-ledger-api
    , programmable-tokens-offchain
    , programmable-tokens-onchain
    , text

test-suite aiken-example-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Wst.Aiken.Test
  build-depends:
    , aiken-example
    , base                          >=4.14.0
    , cardano-api
    , containers
    , convex-base
    , convex-coin-selection
    , convex-wallet
    , mtl
    , programmable-tokens-offchain
    , programmable-tokens-onchain
    , programmable-tokens-testlib
    , tasty
    , tasty-hunit

executable cip-143-cli
  import:         lang
  main-is:        Main.hs
  build-depends:
    , aiken-example
    , base

  hs-source-dirs: exe/cip-143-cli
